--- a/package.json
+++ b/package.json
@@ -7,8 +7,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "prop-types": "^15.6.0",
     "react": "16.2.0",
     "react-native": "0.53.3",
+    "react-native-linear-gradient": "^2.4.0",
+    "react-navigation": "^1.1.2",
+    "react-navigation-redux-helpers": "^1.0.1",
     "react-redux": "^5.0.7",
     "react-router-native": "^4.2.0",
     "redux": "^3.7.2",
