before react-navigator

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "react": "16.2.0",
     "react-native": "0.53.3",
+    "react-native-linear-gradient": "^2.4.0",
     "react-redux": "^5.0.7",
     "react-router-native": "^4.2.0",
     "redux": "^3.7.2",
@@ -23,5 +24,10 @@
   },
   "jest": {
     "preset": "react-native"
+  },
+  "rnpm": {
+    "assets": [
+      "./app/assets/fonts/"
+    ]
   }
 }
