--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "16.2.0",
     "react-native": "0.53.3",
     "react-native-linear-gradient": "^2.4.0",
+    "react-native-vector-icons": "^4.5.0",
     "react-navigation": "^1.1.2",
     "react-navigation-redux-helpers": "^1.0.1",
     "react-redux": "^5.0.7",
